# SPP

./: .gitmodules  Report.md  STREAM_result.txt
BLAS/: .gitignore  Makefile
BLAS/BLAS1/: daxpy.c  ddot.c  dscal.c  main_daxpy.c  main_ddot.c  main_dscal.c  main_saxpy.c  main_sdot.c  main_sscal.c  saxpy.c  sdot.c  sscal.c
BLAS/BLAS2/: dgemv.c  main_dgemv.c  main_sgemv.c  sgemv.c
BLAS/BLAS3/: dgemm.c  main_dgemm.c  main_sgemm.c  sgemm.c
BLAS/BLIS/: CMakeLists.txt
BLAS/BLIS/include/: utils.h
BLAS/BLIS/src/: blis.c
BLAS/data/: daxpy.pkl  ddot.pkl  dscal.pkl  saxpy.pkl  sdot.pkl  sscal.pkl
BLAS/includes/: cblas.h  rand_utils.h  utils.h
BLAS/utils/: plot.py
Floops/: .gitignore  Makefile  Makefile.gcc  Makefile.icc  blas1.c  main.c  markov.c
Floops/includes/: benchmark.h  utils.h
Geeps/: Makefile  benchmark.c  benchmark.h  main.c  utils.c
Results/: Whetstone_Optimised_result.txt  Whetstone_result.txt
Stencil/: .gitignore  Makefile  main.c  plot.py  stencil.c  stencil.h
Whetstone/: Makefile
docs/: Evolution.md  Report.md  book.toml
docs/book/: 404.html  Report.html  index.html  print.html  searchindex.js  searchindex.json
docs/src/: SUMMARY.md
